Include dto for event + mapper + rework service and EventAdminController